--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		</div>
 	</div>
 	<script  src="js/index.js"></script>
-	<audio controls>
-	  <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
+	<audio autoplay>
+	  <source src="music.mp3" type="audio/mpeg">
 	</audio>
 </body>
 </html>
