--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<audio autoplay >
-		<source src="music.mp3" type="audio/mpeg">
-	</audio>
 	<br> <br> <br> <br> <br>
 	<div id="card">
 		<div id="card-inside">
@@ -79,5 +76,8 @@
 		</div>
 	</div>
 	<script  src="js/index.js"></script>
+	<audio autoplay >
+		<source src="music.mp3">
+	</audio>
 </body>
 </html>
