--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		</div>
 	</div>
 	<script  src="js/index.js"></script>
+	<iframe src="muted.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>			 
 	<audio autoplay >
 		<source src="music.mp3">
 	</audio>
